Fix text alignment in app carousel

--- a/_styles/use-case-tabs.less
+++ b/_styles/use-case-tabs.less
@@ -77,7 +77,7 @@
   line-height: 150%;
   flex: 1;
   align-items: center;
-  text-align: justify;
+  text-align: left;
 }
 
 .use-case-fallback {
